--- a/src/scss/app/hero.scss
+++ b/src/scss/app/hero.scss
@@ -1,5 +1,6 @@
 .hero {
   min-height: 100vh;
+  min-height: -webkit-fill-available;
   // min-height: calc(var(--vh, 1vh) * 100);
   display: flex;
   align-items: center;
